fixing accessability errors

--- a/gallery.html
+++ b/gallery.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Bombay Groove | Bollywood String Quartet</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" type="text/css" />
-  </head>
-  
-  <body>
 
-    <!--Navbar-->
+<head>
+	<meta charset="UTF-8" />
+	<title>Bombay Groove | Bollywood String Quartet</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="style.css" type="text/css" />
+</head>
 
-    <div class="navbar-container">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom"
-      >
-        <a class="navbar-brand" href="index.html">Bombay Groove</a>
-        <button
+<body>
+
+	<!--Navbar Bootstrap Navbar Template-->
+
+	<div class="navbar-container">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
+			<a class="navbar-brand" href="index.html">Bombay Groove</a>
+			<button
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
@@ -43,145 +33,126 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Home <span class="sr-only">(home)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="watch-listen.html"
-                >Watch/Listen <span class="sr-only">(watch/listen)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="repertoire.html"
-                >Repertoire<span class="sr-only">(repertoire)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html"
-                >Contact<span class="sr-only">(contact)</span></a
-              >
-            </li>
-          </ul>
-          <span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
+			<div class="collapse navbar-collapse" id="navbarText">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home <span class="sr-only">(home)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="watch-listen.html">Watch/Listen
+							<span class="sr-only">(watch/listen)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link"
+							href="repertoire.html">Repertoire<span class="sr-only">(repertoire)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact<span class="sr-only">(contact)</span></a>
+					</li>
+				</ul>
+				<span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
-          </span>
-        </div>
-      </nav>
-    </div>
+				</span>
+			</div>
+		</nav>
+	</div>
 
-<!--.Navbar-->
-   
-<!--Gallery Header-->
+	<!--.Navbar-->
 
-<div class="container-fluid overflow-hidden">
-      <div class="gallery-container-fluid ">
-        <div class="row">
-          <div class="col-12">
-            <section class="callout jumbotron jumbotron-fluid text-center">
-              <h2 class="jumbotron-header text-uppercase">Gallery</h2>
-            </section>
-          </div>
-        </div>
-      </div>
+	<!--Gallery Header-->
 
-<!--.Gallery Header-->
+	<div class="container-fluid overflow-hidden">
+		<div class="gallery-container-fluid ">
+			<div class="row">
+				<div class="col-12">
+					<section class="callout jumbotron jumbotron-fluid text-center">
+						<h2 class="jumbotron-header text-uppercase">Gallery</h2>
+					</section>
+				</div>
+			</div>
+		</div>
 
-<!--Images-->
+		<!--.Gallery Header-->
 
-<div class="row justify-content-center image-selection">
-<div class="image-container-fluid ">
-    <ul class="photos">
-    <li>
-    <img class="img-fluid d-lg-none tablet-and-mobile-image" src="ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+		<!--Images-->
+
+		<div class="row justify-content-center image-selection">
+			<div class="image-container-fluid ">
+				<ul class="photos">
+					<li>
+						<img class="img-fluid d-lg-none tablet-and-mobile-image" src="ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
-    <li>
-    <img class="img-fluid" src="with-mirror.JPG" alt="Bombay Groove standing near a mirror">
+					<li>
+						<img class="img-fluid" src="with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
-    <li>
-    <img class="img-fluid" src="stockbrook.v1.jpg" alt="Bombay Groove performing at a wedding in black dresses">
+					<li>
+						<img class="img-fluid" src="stockbrook.jpg" alt="Bombay Groove performing at a wedding in black dresses">
     </li>
-    <li>
-    <img class="img-fluid" src="mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
+					<li>
+						<img class="img-fluid" src="mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
-    <li>
-    <img class="img-fluid" src="bg-with-ls.v1.jpg" alt="Bombay Groove on stage, from behind in white dresses">
+					<li>
+						<img class="img-fluid" src="bg-with-ls.jpg" alt="Bombay Groove on stage, from behind in white dresses">
     </li>
-    <li>
-    <img class="img-fluid" src="quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
+					<li>
+						<img class="img-fluid" src="quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
     </li>
-    </ul>
-</div>
-</div>
+				</ul>
+			</div>
+		</div>
 
-<!--.Images-->
+		<!--.Images-->
 
- <!--Footer-->
+		<!--Footer-->
 
-      <footer class="container-fluid fixed">
-        <div class="row justify-content-center">
-          <div class="col-12">
-            <ul class="list-inline social-links">
-              <li class="list-inline-item">
-                <a
-                  target="_blank"
-                  href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ"
-                >
-                  <i class="fa fa-youtube" aria-hidden="true"></i>
-                  <span class="sr-only">YouTube</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a
-                  target="_blank"
-                  href="https://www.facebook.com/BombayGroove/"
-                >
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                  <span class="sr-only">Facebook</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a target="_blank" href="http://www.twitter.com">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                  <span class="sr-only">Twitter</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a target="_blank" href="http://www.instagram.com">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                  <span class="sr-only">Instagram</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </footer>    
-</div> 
-      <!--./Footer-->
+		<footer class="container-fluid fixed">
+			<div class="row justify-content-center">
+				<div class="col-12">
+					<ul class="list-inline social-links">
+						<li class="list-inline-item">
+							<a target="_blank" href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ">
+								<i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
+								<span class="sr-only">YouTube</span>
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a target="_blank" href="https://www.facebook.com/BombayGroove/">
+								<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+								<span class="sr-only">Facebook</span>
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a target="_blank" href="http://www.twitter.com">
+								<i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+								<span class="sr-only">Twitter</span>
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a target="_blank" href="http://www.instagram.com">
+								<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+								<span class="sr-only">Instagram</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</div>
+	<!--./Footer-->
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+	</script>
+</body>
+
 </html>
