--- a/watch-listen.html
+++ b/watch-listen.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<!--Navbar-->
+	<!--Navbar-->
 
 	<div class="navbar-container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
@@ -81,15 +81,15 @@
 									allowfullscreen></iframe>
 								<span class="sr-only">Bombay Groove Showreel</span>
 							</div>
-						<div>
+							<div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-    </div>
-</div>
 
-<!--Audio-->
+		<!--Audio-->
 
 		<div class="container-fluid audio-container-fluid overflow-hidden listen-section">
 			<div class="container-fluid watch-listen-container-fluid">
@@ -104,7 +104,8 @@
 						<div class="col-md-4 listen">
 							<ul style="list-style-type:none; padding:0px">
 								<li>
-									<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848818366&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -117,7 +118,8 @@
 									</div>
 								</li>
 								<li>
-									<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848613004&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -129,7 +131,8 @@
 									</div>
 								</li>
 								<li>
-									<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848608504&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -142,7 +145,8 @@
 									</div>
 								</li>
 								<li>
-									<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -153,63 +157,65 @@
 											title="Jar Of Hearts" target="_blank"
 											style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
 								</li>
-										<li>
-											<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
-												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-											<div
-												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-												<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
-													target="_blank"
-													style="color: #cccccc; text-decoration: none;">Bombay Groove</a>
-												· <a href="https://soundcloud.com/user-555254094/tum-hi-ho"
-													title="Tum Hi Ho" target="_blank"
-													style="color: #cccccc; text-decoration: none;">Tum Hi Ho</a>
-											</div>
-										</li>
-										<li>
-											<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
-												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848605237&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-											<div
-												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-												<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
-													target="_blank"
-													style="color: #cccccc; text-decoration: none;">Bombay Groove</a>
-												· <a href="https://soundcloud.com/user-555254094/pehla-nasha"
-													title="Pehla Nasha" target="_blank"
-													style="color: #cccccc; text-decoration: none;">Pehla Nasha</a>
-											</div>
-										</li>
-										<li>
-											<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden"
-												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848599888&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-											<div
-												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-												<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
-													target="_blank"
-													style="color: #cccccc; text-decoration: none;">Bombay Groove</a>
-												· <a href="https://soundcloud.com/user-555254094/teri-meri"
-													title="Teri Meri" target="_blank"
-													style="color: #cccccc; text-decoration: none;">Teri Meri</a>
-											</div>
-										</li>
-										<li>
-											<iframe class="audio-iframe" width="400" height="100" style="border:0; overflow:hidden;"
-												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-											<div
-												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-												<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
-													target="_blank"
-													style="color: #cccccc; text-decoration: none;">Bombay Groove</a>
-												· <a href="https://soundcloud.com/user-555254094/agar-tum-mil-jao"
-													title="Agar Tum Mil Jao" target="_blank"
-													style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a>
-											</div>
-										</li>
-                                    </ul>    
-								</div>
-							</div>
+								<li>
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
+										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+									<div
+										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+										<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
+											target="_blank" style="color: #cccccc; text-decoration: none;">Bombay
+											Groove</a>
+										· <a href="https://soundcloud.com/user-555254094/tum-hi-ho" title="Tum Hi Ho"
+											target="_blank" style="color: #cccccc; text-decoration: none;">Tum Hi Ho</a>
+									</div>
+								</li>
+								<li>
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
+										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848605237&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+									<div
+										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+										<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
+											target="_blank" style="color: #cccccc; text-decoration: none;">Bombay
+											Groove</a>
+										· <a href="https://soundcloud.com/user-555254094/pehla-nasha"
+											title="Pehla Nasha" target="_blank"
+											style="color: #cccccc; text-decoration: none;">Pehla Nasha</a>
+									</div>
+								</li>
+								<li>
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden"
+										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848599888&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+									<div
+										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+										<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
+											target="_blank" style="color: #cccccc; text-decoration: none;">Bombay
+											Groove</a>
+										· <a href="https://soundcloud.com/user-555254094/teri-meri" title="Teri Meri"
+											target="_blank" style="color: #cccccc; text-decoration: none;">Teri Meri</a>
+									</div>
+								</li>
+								<li>
+									<iframe class="audio-iframe" width="400" height="100"
+										style="border:0; overflow:hidden;"
+										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+									<div
+										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+										<a href="https://soundcloud.com/user-555254094" title="Bombay Groove"
+											target="_blank" style="color: #cccccc; text-decoration: none;">Bombay
+											Groove</a>
+										· <a href="https://soundcloud.com/user-555254094/agar-tum-mil-jao"
+											title="Agar Tum Mil Jao" target="_blank"
+											style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a>
+									</div>
+								</li>
+							</ul>
 						</div>
 					</div>
+				</div>
+			</div>
 		</div>
 
 
@@ -221,25 +227,25 @@
 					<ul class="list-inline social-links">
 						<li class="list-inline-item">
 							<a target="_blank" href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ">
-								<i class="fa fa-youtube" aria-hidden="true"></i>
+								<i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
 								<span class="sr-only">YouTube</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a target="_blank" href="https://www.facebook.com/BombayGroove/">
-								<i class="fa fa-facebook" aria-hidden="true"></i>
+								<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
 								<span class="sr-only">Facebook</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a target="_blank" href="http://www.twitter.com">
-								<i class="fa fa-twitter" aria-hidden="true"></i>
+								<i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
 								<span class="sr-only">Twitter</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a target="_blank" href="http://www.instagram.com">
-								<i class="fa fa-instagram" aria-hidden="true"></i>
+								<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
 								<span class="sr-only">Instagram</span>
 							</a>
 						</li>
