tablet wireframes added

--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,14 @@
 						<div class="email">
 							<a href="mailto:info@bombaygroove.com">
 								<i class="fa fa-envelope" style="color:rgba(255, 79, 79, 0.75)"></i>
+                                <span class="sr-only">Info@BombayGroove.com</span>
 							</a>
 							<p>Info@BombayGroove.com</p>
 						</div>
 						<div class="phone">
 							<a href="tel:+447803138891" style="text-decoration:none">
 								<i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
+                                <span class="sr-only">+447803138891</span>
 							</a>
 							<p class="phone-number" style="text-decoration:none">(+44) 0780 313 8891</p>
 						</div>
