--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 								<i class="fa fa-envelope" style="color:rgba(255, 79, 79, 0.75)"></i>
                                 <span class="sr-only">Info@BombayGroove.com</span>
 							</a>
-							<p>Info@BombayGroove.com</p>
+							<p class="text-center">Info@BombayGroove.com</p>
 						</div>
 						<div class="phone">
 							<a href="tel:+447803138891" style="text-decoration:none">
