sorted layout for repertoire and contact pages on ipad pro

--- a/repertoire.html
+++ b/repertoire.html
@@ -18,7 +18,7 @@
 <body>
 
 	<!--Navbar-->
-
+<div class="repertoire-page">
 	<div class="navbar-container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
 			<a class="navbar-brand" href="index.html">Bombay Groove</a>
@@ -130,7 +130,7 @@
 			</div>
 		</footer>
 	</div>
-
+</div>
 	<!--./Footer-->
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
