file path for gallery background image changed

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 							</a>
 						</li>
 						<li class="list-inline-item">
-							<a target="_blank" href="http://www.twitter.com">
+							<a target="_blank" href="http://www.twitter.com/bombaygroove">
 								<i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
 								<span class="sr-only">Twitter</span>
 							</a>
