file paths for gallery images changed

--- a/gallery.html
+++ b/gallery.html
@@ -84,22 +84,22 @@
 			<div class="image-container-fluid ">
 				<ul class="photos">
 					<li>
-						<img class="img-fluid d-lg-none tablet-and-mobile-image" src="ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+						<img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
 					<li>
-						<img class="img-fluid" src="with-mirror.JPG" alt="Bombay Groove standing near a mirror">
+						<img class="img-fluid" src="assets/images/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
 					<li>
-						<img class="img-fluid" src="stockbrook.jpg" alt="Bombay Groove performing at a wedding in black dresses">
+						<img class="img-fluid" src="assets/images/stockbrook.jpg" alt="Bombay Groove performing at a wedding in black dresses">
     </li>
 					<li>
-						<img class="img-fluid" src="mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
+						<img class="img-fluid" src="assets/images/mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
 					<li>
-						<img class="img-fluid" src="bg-with-ls.jpg" alt="Bombay Groove on stage, from behind in white dresses">
+						<img class="img-fluid" src="assets/images/bg-with-ls.jpg" alt="Bombay Groove on stage, from behind in white dresses">
     </li>
 					<li>
-						<img class="img-fluid" src="quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
+						<img class="img-fluid" src="assets/images/quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
     </li>
 				</ul>
 			</div>
