--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,7 @@
 			<div class="image-container-fluid ">
 				<ul class="photos">
 					<li>
-						<img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+						<img class="img-fluid d-xl-none tablet-and-mobile-image" src="assets/images/ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
 					<li>
 						<img class="img-fluid" src="assets/images/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
