correct file pathway to style.css

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
 		<div>
 			<a>
-				<img class="img-fluid d-xl-none tablet-and-mobile-image" src="assets/images/bombay-groove-color.JPG" alt="Bombay Groove performing on stage in sarees">
+				<img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/bombay-groove-color.JPG" alt="Bombay Groove performing on stage in sarees">
 </a>
-				<h1 class="tablet-and-mobile-header d-xl-none">Bombay Groove</h1>
-				<h2 class="tablet-and-mobile-subheader d-xl-none">Bollywood String Quartet</h2>
+				<h1 class="tablet-and-mobile-header d-lg-none">Bombay Groove</h1>
+				<h2 class="tablet-and-mobile-subheader d-lg-none">Bollywood String Quartet</h2>
 		</div>
 
 		<!--About Us-->
