correct file path for css on all pages.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		rel="stylesheet" />
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
 <body>
@@ -79,10 +79,10 @@
 
 		<div>
 			<a>
-				<img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/bombay-groove-color.JPG" alt="Bombay Groove performing on stage in sarees">
+				<img class="img-fluid d-xl-none tablet-and-mobile-image" src="assets/images/bombay-groove-color.JPG" alt="Bombay Groove performing on stage in sarees">
 </a>
-				<h1 class="tablet-and-mobile-header d-lg-none">Bombay Groove</h1>
-				<h2 class="tablet-and-mobile-subheader d-lg-none">Bollywood String Quartet</h2>
+				<h1 class="tablet-and-mobile-header d-xl-none">Bombay Groove</h1>
+				<h2 class="tablet-and-mobile-subheader d-xl-none">Bollywood String Quartet</h2>
 		</div>
 
 		<!--About Us-->
