--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Bombay Groove | Bollywood String Quartet</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>Bombay Groove | Bollywood String Quartet</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-	<link
-		href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-		rel="stylesheet" />
-	<link rel="stylesheet" href="css/style.css" type="text/css" />
-</head>
+  <body>
+    <!--Navbar-->
 
-<body>
-
-	<!--Navbar-->
-
-	<div class="navbar-container">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
-			<a class="navbar-brand" href="index.html">Bombay Groove</a>
-			<button
+    <div class="navbar-container">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom"
+      >
+        <a class="navbar-brand" href="index.html">Bombay Groove</a>
+        <button
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
@@ -37,114 +46,147 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-			<div class="collapse navbar-collapse" id="navbarText">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="watch-listen.html">Watch/Listen
-							<span class="sr-only">(watch/listen)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link"
-							href="repertoire.html">Repertoire<span class="sr-only">(repertoire)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(gallery)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link active" href="contact.html">Contact<span class="sr-only">(contact)</span></a>
-					</li>
-				</ul>
-				<span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
-            Info@BombayGroove.com</a>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="watch-listen.html"
+                >Watch/Listen <span class="sr-only">(watch/listen)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="repertoire.html"
+                >Repertoire<span class="sr-only">(repertoire)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="gallery.html"
+                >Gallery<span class="sr-only">(gallery)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="contact.html"
+                >Contact<span class="sr-only">(contact)</span></a
+              >
+            </li>
+          </ul>
+          <span class="navbar-text"
+            ><a
+              href="mailto:info@bombaygroove.com"
+              style="text-decoration: none;"
+            >
+              Info@BombayGroove.com</a
+            >
             <span class="sr-only">(Info@BombayGroove.com)</span>
-				</span>
-			</div>
-		</nav>
-	</div>
+          </span>
+        </div>
+      </nav>
+    </div>
 
-	<!--.Navbar-->
+    <!--.Navbar-->
 
-	<!--Contact-->
+    <!--Contact-->
 
-	<div class="container-fluid overflow-hidden">
-		<div class="contact-us-container-fluid contact">
-			<div class="row justify-content-center">
-				<div class="col-12">
-					<h1 class="contact-header text-uppercase text-center">Contact</h1>
-					<p class="contact-paragraph text-center">Please contact us to discuss your requirements.</p>
-					<div class="contact-details text-center">
-						<div class="email">
-							<a href="mailto:info@bombaygroove.com">
-								<i class="fa fa-envelope" style="color:rgba(255, 79, 79, 0.75)"></i>
-                                <span class="sr-only">Info@BombayGroove.com</span>
-							</a>
-							<p class="text-center">Info@BombayGroove.com</p>
-						</div>
-						<div class="phone">
-							<a href="tel:+447803138891" style="text-decoration:none">
-								<i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
-                                <span class="sr-only">+447803138891</span>
-							</a>
-							<p class="phone-number" style="text-decoration:none">(+44) 0780 313 8891</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+    <div class="container-fluid overflow-hidden">
+      <div class="contact-us-container-fluid contact">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <h1 class="contact-header text-uppercase text-center">Contact</h1>
+            <p class="contact-paragraph text-center">
+              Please contact us to discuss your requirements.
+            </p>
+            <div class="contact-details text-center">
+              <div class="email">
+                <a href="mailto:info@bombaygroove.com">
+                  <i
+                    class="fa fa-envelope"
+                    style="color: rgba(255, 79, 79, 0.75);"
+                  ></i>
+                  <span class="sr-only">Info@BombayGroove.com</span>
+                </a>
+                <p class="text-center">Info@BombayGroove.com</p>
+              </div>
+              <div class="phone">
+                <a href="tel:+447803138891" style="text-decoration: none;">
+                  <i
+                    class="fa fa-phone fa-lg"
+                    style="color: rgba(255, 79, 79, 0.75);"
+                  ></i>
+                  <span class="sr-only">+447803138891</span>
+                </a>
+                <p class="phone-number" style="text-decoration: none;">
+                  (+44) 0780 313 8891
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-		<!--.Contact-->
+      <!--.Contact-->
 
-		<!--Footer-->
+      <!--Footer-->
 
-		<footer class="container-fluid">
-			<div class="row justify-content-center">
-				<div class="col-12">
-					<ul class="list-inline social-links">
-						<li class="list-inline-item">
-							<a target="_blank" href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ">
-								<i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
-								<span class="sr-only">YouTube</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" href="https://www.facebook.com/BombayGroove/">
-								<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-								<span class="sr-only">Facebook</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" href="http://www.twitter.com/bombaygroove">
-								<i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
-								<span class="sr-only">Twitter</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" href="http://www.instagram.com">
-								<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-								<span class="sr-only">Instagram</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</footer>
-	</div>
+      <footer class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <ul class="list-inline social-links">
+              <li class="list-inline-item">
+                <a
+                  target="_blank"
+                  href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ"
+                >
+                  <i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
+                  <span class="sr-only">YouTube</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/BombayGroove/"
+                >
+                  <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                  <span class="sr-only">Facebook</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" href="http://www.twitter.com/bombaygroove">
+                  <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+                  <span class="sr-only">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" href="http://www.instagram.com">
+                  <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                  <span class="sr-only">Instagram</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
 
-	<!--./Footer-->
+    <!--./Footer-->
 
-
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-	</script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
