Images compressed to speed up load time. Typos corrected in readme

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <a>
           <img
             class="img-fluid d-xl-none tablet-and-mobile-image"
-            src="assets/images/bombay-groove-color.JPG"
+            src="assets/images/bombay-groove-color-2.jpg"
             alt="Bombay Groove performing on stage in sarees"
           />
         </a>
