--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a target="_blank" href="http://www.instagram.com">
+                <a target="_blank" href="http://www.instagram.com/bombaygroovequartet">
                   <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                   <span class="sr-only">Instagram</span>
                 </a>
