--- a/repertoire.html
+++ b/repertoire.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <!--Navbar-->
+    <!--Navbar Template copied from https://getbootstrap.com/docs/4.5/components/navbar/-->
     <div class="repertoire-page">
       <div class="navbar-container">
         <nav
